# camoufox-mcp

./: .gitignore  README.md  pyproject.toml  test_all_tools.py  test_recording.py
src/camoufox_mcp/: __init__.py  __main__.py  browser.py  server.py  tools_core.py  tools_extra.py  tools_network.py  tools_storage.py  tools_vision.py
