[project]
name = "camoufox-mcp"
version = "0.1.0"
description = "Stealth browser MCP server using Camoufox (anti-detect Firefox)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "camoufox[geoip]",
]

[project.scripts]
camoufox-mcp = "camoufox_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/camoufox_mcp"]
